fixed layout issues

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -11,3 +11,11 @@ img {
   background: var(--bg-primary);
   margin: 4px 10px;
 }
+
+ul {
+  list-style: none;
+}
+
+.container {
+  margin-bottom: 1rem;
+}
