--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,12 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   background: var(--bg-primary);
 }
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+}
